# cleanmac

./: .gitignore  README.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  system.rs
src/components/: Applications.tsx  CacheCleaner.tsx  ConfirmDialog.tsx  Dashboard.tsx  Duplicates.tsx  Images.tsx  JunkFiles.tsx  LargeFiles.tsx  Maintenance.tsx  NodeModules.tsx  Processes.tsx  Sidebar.tsx  Startup.tsx  SystemData.tsx
src/hooks/: use-system.ts
