[package]
name = "cleanmac"
version = "0.1.0"
description = "CleanMac - System cleaner and storage manager for macOS"
authors = ["kevinegstorf"]
edition = "2021"

[lib]
name = "cleanmac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
rayon = "1"
dirs = "5"
